# bareASGI-rest

./: .gitignore  README.md  mkdocs.yml  mypy.ini  pyproject.toml  versions.json
3.2/: 404.html  index.html
3.2/api/bareasgi_rest/: index.html
3.2/user-guide/getting-started/: index.html
3.2/user-guide/installation/: index.html
bareasgi_rest/: __init__.py  arg_builder.py  config.py  constants.py  helpers.py  json_serialization.py  rest_router.py  serialization.py  swagger.py  types.py  typing_inspect.py  typing_inspect_ext.py  utils.py
bareasgi_rest/docstrings/: config.py  docstring.py  iterators.py
bareasgi_rest/protocol/: annotations.py  config.py  utils.py
bareasgi_rest/protocol/iso_8601/: date_time.py  duration.py
bareasgi_rest/protocol/json/: __init__.py  annotations.py  coercion.py  deserializer.py  serialization.py  serializer.py  typed_deserializer.py  typed_serializer.py  untyped_deserializer.py  untyped_serializer.py
bareasgi_rest/protocol/xml/: annotations.py  deserialization.py  deserializer.py  serialization.py  serializer.py
bareasgi_rest/serialization/: json.py  xml.py
bareasgi_rest/swagger/: __init__.py  config.py  controller.py  entry.py  errors.py  parameters.py  paths.py  properties.py  repository.py  responses.py  type_definitions.py  type_info.py  utils.py
bareasgi_rest/templates/: swagger.html
demos/: adhoc.py  adhoc_typing.py  books.py  books_as_dict.py  simple.http  simple.py
docs/: 404.html  index.html  sitemap.xml
docs/api/: bareasgi_rest.md
docs/api/bareasgi_rest/: index.html
docs/css/: custom.css
docs/search/: search_index.json
docs/user-guide/: getting-started.md
docs/user-guide/getting-started/: index.html
docs/user-guide/installation/: index.html
docs/user-guide/usage/: index.html
documentation/: index.md
documentation/api/: bareasgi_rest.md
documentation/user-guide/: getting-started.md  installation.md  usage.md
stable/api/bareasgi_rest/: index.html
stable/user-guide/getting-started/: index.html
stable/user-guide/installation/: index.html
tests/: test_json_serialization.py  test_make_args.py  test_serialization.py  test_swagger.py  test_typing_inspect.py  test_typing_inspect_ext.py  test_utils.py
tests/protocol/iso_8601/: test_date_time.py  test_duration.py
tests/protocol/json/: test_coercion.py  test_deserializer.py  test_serialization.py  test_serializer.py  test_typed_deserializer.py  test_typed_serializer.py  test_untyped_deserializer.py  test_untyped_serializer.py
tests/protocol/xml/: test_deserialization.py  test_deserializer.py  test_serialization.py  test_serializer.py
tests/swagger/: mocks.py  test_entry.py  test_errors.py  test_parameters.py  test_parameterss.py  test_paths.py  test_responses.py  test_type_info.py  test_utils.py
