[tool.poetry]
name = "bareASGI-rest"
version = "3.2.0"
description = "REST support for bareASGI"
repository = "https://github.com/rob-blackbourn/bareASGI-rest"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
keywords = ['bareASGI', 'rest', 'swagger']
license = "Apache-2.0"
readme = "README.md"
packages = [
  { include = "bareasgi_rest" }
]

[tool.poetry.dependencies]
python = "^3.8"
bareasgi = "^3"
bareasgi-jinja2 = "^3.1"
docstring-parser = "^0.6"
typing-extensions = "^3.7"
lxml = "^4.4.2"
stringcase = "^1.2.0"
jetblack-serialization = "^2.0.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
hypercorn = "^0.9"
mypy = "^0.910"
pylint = "^2.9"
pytest = "^5.3"
pytest-asyncio = "^0.10"
pytest-runner = "^5.2"
uvicorn = "^0.11"
rope = "^0.16.0"
jetblack-markdown = "^0.6"
mkdocs = "^1.0.4"
mkdocs-material = "^4.6.0"
types-setuptools = "^57.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
