[tool.poetry]
name = "bareASGI-rest"
version = "4.0.0-alpha.0"
description = "REST support for bareASGI"
repository = "https://github.com/rob-blackbourn/bareASGI-rest"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
keywords = ['bareASGI', 'rest', 'swagger']
license = "Apache-2.0"
readme = "README.md"
packages = [
  { include = "bareasgi_rest" }
]

[tool.poetry.dependencies]
python = "^3.8"
bareasgi = "^4.0"
bareasgi-jinja2 = "^4.0"
docstring-parser = "^0.6"
typing-extensions = "^3.7"
lxml = "^4.4.2"
stringcase = "^1.2.0"
jetblack-serialization = "^2.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"
hypercorn = "^0.11"
mypy = "^0.910"
pylint = "^2.9"
pytest = "^5.3"
pytest-asyncio = "^0.10"
pytest-runner = "^5.2"
uvicorn = "^0.15"
rope = "^0.16.0"
mkdocs = "^1.2"
mkdocs-material = "^7.2"
jetblack-markdown = "^0.6"
mike = "^1.1.1"
types-setuptools = "^57.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
