[tool.poetry]
name = "bareASGI-rest"
version = "4.0.0"
description = "REST support for bareASGI"
repository = "https://github.com/rob-blackbourn/bareASGI-rest"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
keywords = ['bareASGI', 'rest', 'swagger']
license = "Apache-2.0"
readme = "README.md"
packages = [
  { include = "bareasgi_rest" }
]

[tool.poetry.dependencies]
python = "^3.8"
bareasgi = "^4.2"
bareasgi-jinja2 = "^4.0"
docstring-parser = "^0.15"
lxml = "^4.9"
stringcase = "^1.2"
jetblack-serialization = "^3.0"
typing-extensions = "^4"
typing_inspect = "^0.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1"
hypercorn = "^0.14"
mypy = "^0.971"
pylint = "^2"
pytest = "^7"
pytest-asyncio = "^0.19"
pytest-runner = "^6"
uvicorn = "^0.18"
mkdocs = "^1.3"
mkdocs-material = "^8.5"
jetblack-markdown = "^1.1"
mike = "^1.1"
types-setuptools = "^65"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
